@@ -50,11 +50,11 @@
   cd33ad74b608bce33ea297801253e6efbafce27c 2012073100 mingw32-mingw-utils.xml
   8d3a7125499a85916b53efb4c897ac907e2490ab 2015082000 mingw32-mpc.xml
   8a11de23e7a89fd11436bdf162ef90712f30101b 2013102300 mingw32-mpfr.xml
-  56f4032058328cacfabe64fa46706d72c2fa931e 2016090500 mingw32-package-list.xml
+  56f4032058328cacfabe64fa46706d72c2fa931e 2016092100 mingw32-package-list.xml
   1f15439ee5f66ec22321c7aa853559b6f8f7172f 2015090800 mingw32-pexports.xml
   cdb2a4dbedfc9f2cdfc92340f6f9b12da061c0d9 2012073100 mingw32-popt.xml
   6032af6ff68aa4821cf51938781fd9e75f05de5f 2016082200 mingw32-pthreads-w32.xml
-  61adccdf6a1167fd46f6c066e776c661410d5eb2 2016073100 mingw32-runtime.xml
+  4efb82ed1631a627356269d78170ca29de3b9eaa 2016092100 mingw32-runtime.xml
   12acb32f80e49c893167cfae82e448dd766d49bb 2013070100 mingw32-wsl-candidate.xml
   247a02890f109a5fe4996fde4af9d576dca3cd1e 2012073100 mingw32-xz.xml
   c223ecd7389eb02948b54f8959d595cf608306a7 2013101200 mingw32-zlib.xml
