@@ -31,6 +31,7 @@
         <requires eq="mingwrt-%-mingw32-dll.tar" />
         <release tarname="mingwrt-3.22-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.22.1-mingw32-dev.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-dev.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-dev.tar.lzma">
@@ -54,6 +55,7 @@
       <component class="dll">
         <release tarname="mingwrt-3.22-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.22.1-mingw32-dll.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-dll.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-dll.tar.lzma" />
@@ -65,6 +67,7 @@
       <component class="lic">
         <release tarname="mingwrt-3.22-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.22.1-mingw32-lic.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-lic.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-lic.tar.lzma">
@@ -88,6 +91,7 @@
       <component class="man">
         <release tarname="mingwrt-3.22-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.22.1-mingw32-man.tar.xz" />
+        <release tarname="mingwrt-3.22.2-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.21-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.21.1-mingw32-man.tar.xz" />
         <release tarname="mingwrt-3.20-2-mingw32-man.tar.lzma">
@@ -128,6 +132,7 @@
       <licence tarname="w32api-%-mingw32-dev.tar.%" />
 
       <component class="dev">
+        <release tarname="w32api-3.18.2-mingw32-dev.tar.xz" />
         <release tarname="w32api-3.18.1-mingw32-dev.tar.xz" />
         <release tarname="w32api-3.18-mingw32-dev.tar.xz" />
         <release tarname="w32api-3.17-2-mingw32-dev.tar.lzma" />
