@@ -1,3 +1,12 @@
+2016-09-21  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Publish mingwrt-3.22.2 and w32api-3.18.2 patch releases.
+
+	* mingw32/mingw32-runtime.xml (mingwrt-3.22.2-dev)
+	(mingwrt-3.22.2-dll, mingwrt-3.22.2-lic, mingwrt-3.22.2-man)
+	(w32api-3.18.2-dev): Add component package release records.
+	* common/issue.log mingw32/issue.log: Update accordingly.
+
 2016-09-05  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Correct underspecified dependency in 2016-09-04 update.
